[Bug #76744] - word-wrap on a tags site wide

--- a/tourismaustralia-styleguide/assets/scss/site/_base.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/_base.scss
@@ -100,6 +100,7 @@ p a {
   box-shadow: 0 1px 0 #d4dcde;
   -webkit-box-shadow: 0 1px 0 #d4dcde;
   -moz-box-shadow: 0 1px 0 #d4dcde;
+  word-wrap: break-word;
 }
 
 p a:hover {
